--- a/iframe.html
+++ b/iframe.html
@@ -100,8 +100,8 @@
         .overlay {
             width: 100%;
             height: 100%;
-            background: rgba(255, 200, 25, 1);
-            position: absolute;
+            background: rgba(255, 255, 255, 1);
+            position: fixed;
             top: 0;
             left: 0;
             display: flex;
@@ -119,14 +119,13 @@
             width: 100%;
             height: 100%;
             display: flex;
-            background: rgb(128, 182, 218)
+            background: rgb(255, 255, 218);
+            overflow-y: auto;
         }
 
         .modal-content {
             position: absolute;
             width: 80%;
-            height: 100%;
-            background: plum;
             left: 0;
             right: 0;
             margin-left: auto;
